# serverless-study-2024

./: LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  format.yml  pull_request.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
