[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.11.2"
serde_json = "1.0.117"
tokio ={ version = "1.36.0", features = ["macros"]}
serde = "1.0.202"


[dev-dependencies]
tokio-test = "0.4.4"